Implementando edição da tarefa

--- a/src/app/tarefas/paginas/listar-tarefa/listar-tarefa.component.html
+++ b/src/app/tarefas/paginas/listar-tarefa/listar-tarefa.component.html
@@ -15,7 +15,8 @@
       </div>
     </div>
     <div class="list-view-item-actions">
-      <button type="button" class="fa fa-pencil action-btn"></button>
+      <button type="button" class="fa fa-pencil action-btn"
+        routerLink="/tarefas/editar/{{tarefa.id}}"></button>
       <button type="button" class="fa fa-trash action-btn"></button>
     </div>
   </li>
