Implementando remoção da Tarefa

--- a/src/app/tarefas/paginas/listar-tarefa/listar-tarefa.component.html
+++ b/src/app/tarefas/paginas/listar-tarefa/listar-tarefa.component.html
@@ -17,7 +17,8 @@
     <div class="list-view-item-actions">
       <button type="button" class="fa fa-pencil action-btn"
         routerLink="/tarefas/editar/{{tarefa.id}}"></button>
-      <button type="button" class="fa fa-trash action-btn"></button>
+      <button type="button" class="fa fa-trash action-btn"
+        (click)="remove(tarefa)"></button>
     </div>
   </li>
 </ul>
