--- a/src/app/tarefas/paginas/listar-tarefa/listar-tarefa.component.css
+++ b/src/app/tarefas/paginas/listar-tarefa/listar-tarefa.component.css
@@ -84,3 +84,25 @@
 .visible {
   display: flex;
 }
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+.tooltip .tooltip-text {
+  visibility: hidden;
+  width: 120px;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  left: 0;
+  top: 40px;
+  z-index: 1;
+  font-size: 12px;
+  font-weight: 400;
+}
+.tooltip:hover .tooltip-text {
+  visibility: visible;
+}
