--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,34 +1,50 @@
 .header {
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
+
 .navbar {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0;
 }
+
 .container {
-  width: 60%;
-  margin: auto;
+    width: 60%;
+    margin: auto;
 }
+
 .app-logo a {
-  text-decoration: none;
+    text-decoration: none;
 }
+
 .app-name {
-  font-size: 28px;
-  font-weight: 500;
-  color: #333;
+    font-size: 28px;
+    font-weight: 500;
+    color: #333;
 }
+
 .pages {
-  padding: 10px 0;
+    padding: 10px 0;
 }
+
 .footer {
-  border-top: 1px solid #dfdfdf;
-  padding: 10px 0;
+    border-top: 1px solid #dfdfdf;
+    padding: 10px 0;
 }
+
 .footer-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-sair {
+    text-decoration: none;
+    color: #333;
+}
+
+.show-btn-sair {
+    display: block;
 }
